# mlx-whisper-api

./: .gitignore  LICENSE  README.md  pyproject.toml  transcribe_demo.sh
.github/workflows/: test-brew-install.yml
Formula/: README.md  mlx-whisper-api.rb
app/: __main__.py  config.py  errors.py  main.py  middleware.py  validation.py
app/routers/: models.py  transcribe.py
app/schemas/: models.py
app/services/: model_manager.py  transcription.py
tests/: conftest.py
tests/fixtures/: generate_test_audio.py
tests/integration/: test_error_handling.py  test_health.py  test_models.py  test_transcribe.py
tests/unit/: test_audio_processor.py  test_errors.py  test_model_manager.py  test_transcription_service.py  test_validation.py
